# deepchem-server

./: .dockerignore  .gitignore  .yapfignore  Dockerfile  Dockerfile-GPU  Dockerfile.gpu  LICENSE  LINT_USAGE.md  README.md  docker-compose.yml  docker.sh  lint.sh  setup.cfg  start-dev-server.sh  start-server.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/cleanup/: action.yml
.github/workflows/: build-check.yml  core-pytests.yml  docs.yml  lint-check.yml  py-ds-test.yml  pyds-test.yml
deepchem_server/: main.py  requirements.txt  utils.py
deepchem_server/core/: __init__.py  address.py  cards.py  compute.py  config.py  datastore.py  docking.py  evaluate.py  evaluator.py  feat.py  inference.py  model_config_mapper.py  model_mappings.py  progress_logger.py  splitter.py  test_1.csv  test_2.csv  train.py
deepchem_server/core/fep/: README.md  __init__.py
deepchem_server/core/tests/: conftest.py  test_1.csv  test_2.csv  test_address.py  test_cards.py  test_datastore.py  test_docking.py  test_evaluate.py  test_evaluator.py  test_feat.py  test_inference.py  test_splitter.py  (+1 more)
deepchem_server/environments/: core_environment.yml  dev-requirements.txt  gpu_environment.yml
deepchem_server/routers/: data.py  primitives.py
docs/: .gitignore  Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst  primitives.rst
py-ds/: README.md  data.py  primitives.py  requirements.txt  settings.py
py-ds/tests/: test_upload_featurize.py
pyds/: .coveragerc  MANIFEST.in  PACKAGING.md  README.md  __init__.py  data.py  primitives.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.json  settings.py
pyds/base/: __init__.py  client.py
pyds/primitives/: __init__.py  base.py  docking.py  evaluate.py  featurize.py  infer.py  rbfe.py  splitter.py  train.py  tvt_splitter.py
pyds/tests/: README.md  __init__.py  conftest.py  requirements.txt  test_base_client.py  test_data.py  test_docking.py  test_evaluate.py  test_featurize.py  test_infer.py  test_init.py  test_primitives.py  test_rbfe.py  test_settings.py  test_train.py  test_upload_featurize.py  test_utils.py
scripts/: README.md  pytest_pyds.sh
scripts/tests/: pytest_pyds.sh
(+111 files in other folders)
