[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyds"
version = "0.1.0"
description = "A Python client for interacting with the DeepChem server API"
readme = "README.md"
requires-python = ">=3.7"
# license = {file = "LICENSE"}  # License file not added yet
authors = [
    {name = "DeepChem Team", email = "contact@deepchem.io"},
]
maintainers = [
    {name = "DeepChem Team", email = "contact@deepchem.io"},
]
keywords = ["deepchem", "machine-learning", "chemistry", "api-client", "data-science"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "requests-toolbelt>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock>=3.6",
    "pytest-cov>=3.0",
    "responses>=0.20.0",
    "build>=0.8.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=6.0",
    "pytest-mock>=3.6",
    "responses>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/deepchem/deepchem-server"
Documentation = "https://deepchem-server.readthedocs.io/"
Repository = "https://github.com/deepchem/deepchem-server"
"Bug Reports" = "https://github.com/deepchem/deepchem-server/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

# Version is now specified in the [project] section above

[tool.setuptools.package-data]
pyds = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
